added confirm example

--- a/stars.html
+++ b/stars.html
@@ -14,8 +14,12 @@
         <input type="text" class="stars" name="michelin">
         <br><br>
         <button id="gohome">Destroy second input</button>
+        
+        <a class="delete" href="#">One</a><br>
+        <a class="delete" href="#">Two</a>
     </form>
     <script src="js/stars.jquery.js"></script>
+    <script src="js/confirm.jquery.js"></script>
     <script src="js/stars.main.js"></script>
 </body>
 </html>
